# map_to_image

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/map_to_image/: map_to_image.hpp
launch/: launch.py
src/: main.cpp  map_to_image.cpp
